# Backstage

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyproject.toml.backup  render.yaml  requirements.txt  tailwind.config.js  tsconfig.json  vercel.json
api/: backtest.py  chat.py  data.py  hello.py  indicators.py  parse.py
backend/: requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: chat.py  routes.py
backend/app/core/engine/: backtest.py
backend/app/core/indicators/: technical.py
backend/app/core/models/: results.py  strategy.py
backend/app/data/: base.py  csv_adapter.py  registry.py  synthetic_adapter.py
backend/app/db/: database.py
backend/app/services/: chatbot.py  metrics.py
backend/app/strategies/: __init__.py  parser.py
backend/tests/: test_engine.py
examples/: ema_crossover.yaml  rsi_mean_reversion.yaml
sample_data/: BANKNIFTY.csv  HDFCBANK.csv  INFY.csv  NIFTY.csv  RELIANCE.csv  TCS.csv  generate.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/backtest/: route.ts
src/app/api/chat/: route.ts
src/app/api/data/instruments/: route.ts
src/app/api/data/live/: route.ts
src/app/api/data/sources/: route.ts
src/app/api/indicators/: route.ts
src/app/api/parse/: route.ts
src/components/: BacktestResults.tsx  ChatCoach.tsx  EquityChart.tsx  PriceChart.tsx  StrategyBuilder.tsx  TradeTable.tsx
src/lib/: api.ts  backtest.ts  chatbot.ts  data.ts  indicators.ts  parser.ts  types.ts
src/types/: index.ts
